--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "license": "EPL-1.0",
   "devDependencies": {
-    "react-scripts": "0.8.4"
+    "react-scripts": "^1.0.10"
   },
   "dependencies": {
     "axios": "^0.15.3",
@@ -12,7 +12,7 @@
     "bootstrap-select": "^1.12.1",
     "file-loader": "^0.10.0",
     "font-awesome": "^4.7.0",
-    "ioc-liturgical-react": "0.0.23",
+    "ioc-liturgical-react": "0.0.26",
     "neo4j-driver": "^1.0.4",
     "pkginfo": "^0.4.0",
     "react": "^15.4.2",
@@ -24,9 +24,11 @@
     "react-fontawesome": "^1.5.0 ",
     "react-iframe": "^0.0.04",
     "react-jsonschema-form": "^0.43.0",
+    "react-redux": "^5.0.5",
     "react-router": "^3.0.0",
     "react-router-bootstrap":"0.23.1 ",
     "react-select": "^1.0.0-rc.2",
+    "redux": "^3.7.2",
     "svgo": "^0.7.1"
   },
   "scripts": {
