--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ioc-tms",
-  "version": "0.0.1",
+  "name": "ocmc-tms",
+  "version": "1.7.1",
   "private": true,
   "license": "EPL-1.0",
   "devDependencies": {
@@ -13,7 +13,7 @@
     "bootstrap-select": "^1.12.1",
     "file-loader": "^0.10.0",
     "font-awesome": "^4.7.0",
-    "ioc-liturgical-react": "^0.0.35",
+    "ioc-liturgical-react": "^0.0.37",
     "jest-cli": "^20.0.4",
     "neo4j-driver": "^1.0.4",
     "pkginfo": "^0.4.0",
