--- a/package.json
+++ b/package.json
@@ -13,23 +13,24 @@
     "bootstrap-select": "^1.12.1",
     "file-loader": "^0.10.0",
     "font-awesome": "^4.7.0",
-    "ioc-liturgical-react": "^0.0.48",
+    "ioc-liturgical-react": "^0.0.50",
     "jest-cli": "^20.0.4",
     "neo4j-driver": "^1.0.4",
     "pkginfo": "^0.4.0",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-autosuggest": "^7.0.1",
     "react-bootstrap": "0.30.7",
     "react-bootstrap-table": "3.4.6",
-    "react-dom":"^15.6.1",
+    "react-dom": "^15.6.1",
     "react-file-download": "^0.3.2",
     "react-fontawesome": "^1.5.0 ",
     "react-iframe": "^0.0.04",
     "react-jsonschema-form": "^0.41.2",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.2",
-    "react-router-dom": "^4.1.2",
     "react-router-bootstrap": "^0.24.2",
+    "react-router-dom": "^4.1.2",
     "react-select": "^1.0.0-rc.2",
     "redux": "^3.7.2",
     "svgo": "^0.7.1"
