--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ocmc-tms",
-  "version": "1.7.9",
+  "name": "ocmc-olw",
+  "version": "1.8.0",
   "private": true,
   "license": "EPL-1.0",
   "devDependencies": {
@@ -13,7 +13,7 @@
     "bootstrap-select": "^1.12.1",
     "file-loader": "^0.10.0",
     "font-awesome": "^4.7.0",
-    "ioc-liturgical-react": "^0.0.50",
+    "ioc-liturgical-react": "0.0.56",
     "jest-cli": "^20.0.4",
     "neo4j-driver": "^1.0.4",
     "pkginfo": "^0.4.0",
@@ -25,7 +25,6 @@
     "react-dom": "^15.6.1",
     "react-file-download": "^0.3.2",
     "react-fontawesome": "^1.5.0 ",
-    "react-iframe": "^0.0.04",
     "react-jsonschema-form": "^0.41.2",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.2",
