--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ocmc-olw",
-  "version": "2018.09.14.1",
+  "version": "2018.10.04.1",
   "private": true,
   "license": "EPL-1.0",
   "devDependencies": {
@@ -13,7 +13,7 @@
     "bootstrap-select": "^1.12.1",
     "file-loader": "^0.10.0",
     "font-awesome": "^4.7.0",
-    "ioc-liturgical-react": "^0.8.7",
+    "ioc-liturgical-react": "^0.8.8",
     "jest-cli": "^20.0.4",
     "neo4j-driver": "^1.0.4",
     "pkginfo": "^0.4.0",
@@ -31,6 +31,7 @@
     "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.1.2",
     "react-select": "^1.0.0-rc.2",
+    "react-twitter-embed": "^1.2.0",
     "react-youtube": "^7.6.0",
     "redux": "^3.7.2",
     "svgo": "^0.7.1"
